# CU-VLA

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
docs/: NOTES.md
docs/experiments/: 1-reactive-clicks.md  2-act.md  2.1-act-v2.md  3-miniwob-pygame.md  4-smolvla.md  5-mini-text-editor.md  6-action-primitives-changelog.md  6-action-primitives.md
docs/learnings/: 2026-04-14-exp2-training-optimisation.md
docs/ops/: aws-bootstrap.md
docs/plans/: 2026-04-11-reactive-clicks-design.md  2026-04-13-act-drag-and-label-design.md  2026-04-13-act-drag-and-label-implementation.md  2026-04-13-miniwob-pygame-implementation.md  2026-04-14-exp2-discrete-bins-film.md  2026-04-14-mini-editor-design.md  2026-04-14-smolvla-design.md  2026-04-15-mini-editor-implementation.md  2026-04-15-mini-editor-model-architecture.md  2026-04-23-action-primitives-phase-a-implementation.md  2026-04-25-action-primitives-phase-b0-design.md  2026-04-25-action-primitives-phase-b0-implementation.md  2026-04-26-sagemaker-migration-design.md  2026-04-26-sagemaker-migration-implementation.md  2026-04-27-b0-bundled-fixes-implementation.md
docs/research/: Brain Dump.md  High-Frequency Vision-Language-Action Models for Computer Use  Feasibility and a Minimal Proof of Concept.md  VLA Models Meet Computer Use.md  hf-jobs-gotchas.md
experiments/act_drag_label/: RESULTS.md  backbones.py  baseline_cnn.py  config.py  env.py  evaluate.py  expert.py  generate_data.py  hf_sync.py  model.py  train.py  train_baseline.py  visualize_data.py
experiments/action_primitives/: README.md  __init__.py  backbones.py  config.py  dataset.py  env.py  evaluate.py  expert.py  generate_data.py  (+15 more)
playground/: README.md
scripts/: hf_job_generate_data.py  hf_job_train.py  hf_job_train_exp6.py  launch_hf_job.py  launch_hf_job_exp6.py  launch_sm_job.py  launch_sm_job_exp6.py  migrate_hdf5_to_parquet.py  requirements-sagemaker.txt  sagemaker_trainer.py  setup_runpod.sh  sm_job_train.py  sm_jobs.py
(+125 files in other folders)
