[project]
name = "cu-vla"
version = "0.1.0"
description = "High-frequency VLA models for computer use"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.11",
    "numpy>=2.0",
    "pygame-ce>=2.5",
    "h5py>=3.12",
    "matplotlib>=3.10",
    "torchvision>=0.22",
    "transformers>=4.52",
    "huggingface-hub>=1.10.1",
    "datasets>=3.0",
    "Pillow>=10.0",
    "pytest>=9.0.3",
    "peft>=0.10",
    "wandb>=0.18",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
